--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,8 @@
 	branch = eosiosdk
 [submodule "eosio_llvm"]
 	path = eosio_llvm
-	url = https://github.com/eosio/llvm
+	url = https://github.com/cryptcoin-junkey/llvm
+	branch = pr-crash-bug
 [submodule "libraries/native/softfloat"]
 	path = libraries/native/softfloat
 	url = https://github.com/EOSIO/berkeley-softfloat-3.git
